[gd_scene load_steps=60 format=3 uid="uid://patekpdib63w"]

[ext_resource type="Script" path="res://Scripts/GameBoard.gd" id="1_54tt6"]
[ext_resource type="Script" path="res://Scripts/LevelManager.gd" id="1_hgg8q"]
[ext_resource type="Resource" uid="uid://d32f7w6gvavmm" path="res://Resources/Grid.tres" id="2_0r2mq"]
[ext_resource type="Texture2D" uid="uid://wrgk0ah3wagm" path="res://UI/TurnBar.png" id="2_c3kva"]
[ext_resource type="PackedScene" uid="uid://bb1s8fhbukv66" path="res://Scenes/Camera.tscn" id="2_pxgfw"]
[ext_resource type="Script" path="res://Scripts/UnitPath.gd" id="2_w1kn0"]
[ext_resource type="PackedScene" uid="uid://20i4en7e2fm7" path="res://Scenes/Unit.tscn" id="3_7kb1e"]
[ext_resource type="Texture2D" uid="uid://cksudcxp4vmyu" path="res://UI/StatusUI_Ling.png" id="3_7qpu3"]
[ext_resource type="Script" path="res://Scenes/Deck.gd" id="4_n4ffv"]
[ext_resource type="Texture2D" uid="uid://t6fvglavpu4g" path="res://UI/EndTurn.png" id="4_qw0um"]
[ext_resource type="Texture2D" uid="uid://2n71oiuyrq6f" path="res://UI/StatusUI_soerjo.png" id="5_yayhc"]
[ext_resource type="Script" path="res://Scenes/StatusUI.gd" id="6_4eeb0"]
[ext_resource type="Shader" path="res://Scenes/burn.gdshader" id="7_4j1oy"]
[ext_resource type="Shader" path="res://Scenes/dissolve.gdshader" id="7_wckpu"]
[ext_resource type="Texture2D" uid="uid://cvta2lgj4lfww" path="res://UI/dissolve.png" id="8_3yyag"]
[ext_resource type="PackedScene" uid="uid://b1t8iyisfbe0v" path="res://Scenes/Cursor.tscn" id="8_4uheh"]
[ext_resource type="Texture2D" uid="uid://nunbe0hanbsd" path="res://UI/innate_status_ui.png" id="8_r03ek"]
[ext_resource type="Texture2D" uid="uid://bq07uefqpafdi" path="res://UI/modular_status_ui.png" id="9_6n57g"]
[ext_resource type="AnimationLibrary" uid="uid://dv6a1fuvgvs7f" path="res://Resources/Animation_Resources/Soerjo_animation.res" id="11_601eb"]
[ext_resource type="FontFile" uid="uid://bs41epct36unk" path="res://UI/I-pixel-u.ttf" id="11_jjinn"]
[ext_resource type="Texture2D" uid="uid://b7hyq78krxwli" path="res://UI/bar_container.png" id="12_2t4b1"]
[ext_resource type="Script" path="res://Scenes/EnemyController.gd" id="12_bpvfk"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://cxhfosr80gxwx" path="res://Resources/Animation_Resources/Soerjo_animation_tree.tres" id="12_e2jf1"]
[ext_resource type="Texture2D" uid="uid://jlvsugiwbtfm" path="res://UI/health_bar_filled.png" id="13_lmcxi"]
[ext_resource type="Texture2D" uid="uid://jpc1o1j6bcqu" path="res://Sprites/Path.png" id="13_vtw6r"]
[ext_resource type="Texture2D" uid="uid://d333a8tuighwt" path="res://UI/armor_bar_empty.png" id="14_ud0ee"]
[ext_resource type="Texture2D" uid="uid://bfnvl8ax0sf2t" path="res://UI/armor_bar_filled.png" id="15_4irrx"]
[ext_resource type="Texture2D" uid="uid://bvbm5241gmlcx" path="res://UI/bg.png" id="18_vnaq5"]
[ext_resource type="Texture2D" uid="uid://sqoccmhkk5ea" path="res://Sprites/lvl1.png" id="19_nxtcr"]
[ext_resource type="Script" path="res://addons/utility_ai/agent/agent.gd" id="27_yvtgi"]
[ext_resource type="Script" path="res://addons/utility_ai/actions/action.gd" id="28_lvhxf"]
[ext_resource type="Script" path="res://addons/utility_ai/considerations/aggregation.gd" id="29_6jobp"]
[ext_resource type="Script" path="res://addons/utility_ai/considerations/consideration_from_node.gd" id="29_w7j6f"]

[sub_resource type="Animation" id="Animation_pfk2h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Modular:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_qhocx"]
resource_name = "burn_innate_card"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"card_burned"
}]
}

[sub_resource type="Animation" id="Animation_e8keg"]
resource_name = "burn_modular_card"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Modular:material:shader_parameter/dissolve_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"modular_card_finish_burned"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bejng"]
_data = {
"RESET": SubResource("Animation_pfk2h"),
"burn_innate_card": SubResource("Animation_qhocx"),
"burn_modular_card": SubResource("Animation_e8keg")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5un84"]
resource_local_to_scene = true
shader = ExtResource("7_4j1oy")
shader_parameter/dissolve_value = 1.0
shader_parameter/dissolve_texture = ExtResource("8_3yyag")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jewqy"]
resource_local_to_scene = true
shader = ExtResource("7_wckpu")
shader_parameter/dissolve_value = 1.0
shader_parameter/dissolve_texture = ExtResource("8_3yyag")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7sm4h"]
resource_local_to_scene = true
content_margin_left = 256.0
content_margin_top = 52.0
texture = ExtResource("12_2t4b1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wxmda"]
resource_local_to_scene = true
texture = ExtResource("13_lmcxi")
texture_margin_left = 12.0
texture_margin_right = 12.0
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wvygj"]
content_margin_left = 256.0
content_margin_top = 52.0
texture = ExtResource("14_ud0ee")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lsig2"]
resource_local_to_scene = true
texture = ExtResource("15_4irrx")
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2hkw"]
content_margin_bottom = 10.0
texture = ExtResource("4_qw0um")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vlgfa"]
texture = ExtResource("13_vtw6r")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 32)
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -32, 64, 0, 0, 32, -64, 0)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 32)
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -32, 64, 0, 0, 32, -64, 0)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 32)
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -32, 64, 0, 0, 32, -64, 0)

[sub_resource type="TileSet" id="TileSet_5x5x1"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vlgfa")

[sub_resource type="Curve" id="Curve_is87y"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ur48y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_coru3"]
resource_local_to_scene = true
max_value = 1.5
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.198675, 0.101064), 0.0, 0.0, 0, 0, Vector2(0.496689, 1), 0.0, 0.0, 0, 0, Vector2(1, 1.00275), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_00g62"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_np16m"]
resource_local_to_scene = true
_data = [Vector2(0, 1), 0.0, -0.5, 0, 1, Vector2(0.2, 0.9), -0.5, -2.46495, 1, 1, Vector2(0.549575, 0.0383133), 0.0, 0.0, 0, 0, Vector2(0.985836, 0.0383133), 0.0, 0.0, 0, 0]
point_count = 4
metadata/_snap_count = 14

[sub_resource type="Curve" id="Curve_pgk3n"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_iuq50"]
max_value = 1.5
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1.5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_mo8k6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_bpnxu"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ugd0t"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_io8sp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_c5jau"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ouiti"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Level" type="Node2D"]
script = ExtResource("1_hgg8q")
statusUItexture = Array[Texture2D]([ExtResource("5_yayhc"), ExtResource("3_7qpu3")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 40.0
offset_right = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/UI/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusUI" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(576, 320)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_yayhc")
script = ExtResource("6_4eeb0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI"]
root_node = NodePath("../Ability/Innate")
libraries = {
"": SubResource("AnimationLibrary_bejng")
}

[node name="Ability" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI"]
layout_mode = 0
offset_left = 333.0
offset_top = 361.0
offset_right = 436.0
offset_bottom = 421.0
theme_override_constants/separation = 15

[node name="Innate" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI/Ability"]
material = SubResource("ShaderMaterial_5un84")
layout_mode = 2
texture = ExtResource("8_r03ek")

[node name="Modular" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI/Ability"]
material = SubResource("ShaderMaterial_jewqy")
layout_mode = 2
texture = ExtResource("9_6n57g")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI"]
layout_mode = 0
offset_left = 320.0
offset_top = 181.0
offset_right = 576.0
offset_bottom = 233.0
theme_override_styles/background = SubResource("StyleBoxTexture_7sm4h")
theme_override_styles/fill = SubResource("StyleBoxTexture_wxmda")
max_value = 5.0
step = 1.0
value = 3.0
show_percentage = false

[node name="HPText" type="Label" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -23.0
offset_right = 35.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_jjinn")
theme_override_font_sizes/font_size = 30
text = "3/5"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI"]
layout_mode = 0
offset_left = 320.0
offset_top = 283.0
offset_right = 324.0
offset_bottom = 310.0
theme_override_styles/background = SubResource("StyleBoxTexture_wvygj")
theme_override_styles/fill = SubResource("StyleBoxTexture_lsig2")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false

[node name="ArmorText" type="Label" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer/StatusUI/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -24.0
offset_right = 35.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("11_jjinn")
theme_override_font_sizes/font_size = 30
text = "3/3"

[node name="Hands" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
mouse_filter = 2
alignment = 1
script = ExtResource("4_n4ffv")

[node name="TurnChanger" type="Button" parent="CanvasLayer/UI/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(328, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("11_jjinn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_t2hkw")
text = "END TURN
"

[node name="Button" type="Button" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "x"

[node name="TurnBasedUI" type="NinePatchRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 124.0
grow_horizontal = 2
texture = ExtResource("2_c3kva")
patch_margin_left = 40
patch_margin_right = 40

[node name="TurnBasedIcons" type="HBoxContainer" parent="CanvasLayer/UI/TurnBasedUI"]
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 96.0

[node name="Bg4" type="Sprite2D" parent="."]
visible = false
position = Vector2(-960, -540)
texture = ExtResource("18_vnaq5")

[node name="Bg3" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, -540)
texture = ExtResource("18_vnaq5")

[node name="Bg2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-960, 540)
texture = ExtResource("18_vnaq5")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(168, 124)
texture = ExtResource("19_nxtcr")

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("1_54tt6")
grid = ExtResource("2_0r2mq")

[node name="UnitPath" type="TileMap" parent="GameBoard"]
y_sort_enabled = true
tile_set = SubResource("TileSet_5x5x1")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-262145, 0, 0)
script = ExtResource("2_w1kn0")
grid = ExtResource("2_0r2mq")

[node name="Cursor" parent="GameBoard" instance=ExtResource("8_4uheh")]
z_index = 1
position = Vector2(400, 33)

[node name="Player" type="Node2D" parent="GameBoard"]

[node name="Soerjo" parent="GameBoard/Player" instance=ExtResource("3_7kb1e")]
position = Vector2(378, 259)
_animation_resource = ExtResource("11_601eb")
_animation_state_machine = ExtResource("12_e2jf1")
hframe = 7
vframe = 4

[node name="Ling" parent="GameBoard/Player" instance=ExtResource("3_7kb1e")]
position = Vector2(578, 161)
player_id = 2
_animation_resource = ExtResource("11_601eb")
_animation_state_machine = ExtResource("12_e2jf1")
hframe = 7
vframe = 1

[node name="Enemy" type="Node2D" parent="GameBoard"]
script = ExtResource("12_bpvfk")

[node name="Unit" parent="GameBoard/Enemy" instance=ExtResource("3_7kb1e")]
position = Vector2(62, 552)
player_id = 6
_animation_resource = ExtResource("11_601eb")
_animation_state_machine = ExtResource("12_e2jf1")
hframe = 7
vframe = 1

[node name="Unit2" parent="GameBoard/Enemy" instance=ExtResource("3_7kb1e")]
position = Vector2(442, 678)
player_id = 6
_animation_resource = ExtResource("11_601eb")
_animation_state_machine = ExtResource("12_e2jf1")
hframe = 7
vframe = 1

[node name="UtilityAiAgent" type="Node" parent="GameBoard/Enemy"]
script = ExtResource("27_yvtgi")

[node name="approach" type="Node" parent="GameBoard/Enemy/UtilityAiAgent"]
script = ExtResource("28_lvhxf")
_action_id = "approach"

[node name="UtilityAiAggregation2" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/approach"]
script = ExtResource("29_6jobp")

[node name="is_within_range" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/approach/UtilityAiAggregation2" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "is_within_range"
curve = SubResource("Curve_is87y")

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/approach/UtilityAiAggregation2"]
script = ExtResource("29_6jobp")

[node name="empty_ammo" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/approach/UtilityAiAggregation2/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_empty_ammo"
curve = SubResource("Curve_ur48y")

[node name="health" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/approach/UtilityAiAggregation2/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "curr_health"
max_value = 12.0
curve = SubResource("Curve_coru3")

[node name="flee" type="Node" parent="GameBoard/Enemy/UtilityAiAgent"]
script = ExtResource("28_lvhxf")
_action_id = "flee"

[node name="UtilityAiAggregation2" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/flee"]
script = ExtResource("29_6jobp")

[node name="is_within_range" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/flee/UtilityAiAggregation2" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "is_within_range"
curve = SubResource("Curve_00g62")

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/flee/UtilityAiAggregation2"]
script = ExtResource("29_6jobp")

[node name="health" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/flee/UtilityAiAggregation2/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "curr_health"
max_value = 12.0
curve = SubResource("Curve_np16m")

[node name="empty_ammo" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/flee/UtilityAiAggregation2/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_empty_ammo"
curve = SubResource("Curve_pgk3n")

[node name="reload" type="Node" parent="GameBoard/Enemy/UtilityAiAgent"]
script = ExtResource("28_lvhxf")
_action_id = "reload"

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/reload"]
script = ExtResource("29_6jobp")

[node name="empty_ammo" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/reload/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "is_empty_ammo"
max_value = 1.5
curve = SubResource("Curve_iuq50")

[node name="health" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/reload/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "curr_health"
max_value = 12.0
curve = SubResource("Curve_coru3")

[node name="shoot" type="Node" parent="GameBoard/Enemy/UtilityAiAgent"]
script = ExtResource("28_lvhxf")
_action_id = "shoot"

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/shoot"]
script = ExtResource("29_6jobp")

[node name="innate_done" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/shoot/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "innate_done"
curve = SubResource("Curve_mo8k6")

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/shoot/UtilityAiAggregation"]
script = ExtResource("29_6jobp")

[node name="is_within_range" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/shoot/UtilityAiAggregation/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_within_range"
curve = SubResource("Curve_bpnxu")

[node name="empty_ammo" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/shoot/UtilityAiAggregation/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_empty_ammo"
curve = SubResource("Curve_ugd0t")

[node name="rest" type="Node" parent="GameBoard/Enemy/UtilityAiAgent"]
script = ExtResource("28_lvhxf")
_action_id = "rest"

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/rest"]
script = ExtResource("29_6jobp")

[node name="innate_done" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/rest/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../..")
property_name = "innate_done"
curve = SubResource("Curve_io8sp")

[node name="UtilityAiAggregation" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/rest/UtilityAiAggregation"]
script = ExtResource("29_6jobp")

[node name="is_within_range" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/rest/UtilityAiAggregation/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_within_range"
curve = SubResource("Curve_c5jau")

[node name="empty_ammo" type="Node" parent="GameBoard/Enemy/UtilityAiAgent/rest/UtilityAiAggregation/UtilityAiAggregation" node_paths=PackedStringArray("node")]
script = ExtResource("29_w7j6f")
node = NodePath("../../../../..")
property_name = "is_empty_ammo"
curve = SubResource("Curve_ouiti")

[node name="Timer" type="Timer" parent="."]

[node name="TacticsCamera" parent="." instance=ExtResource("2_pxgfw")]
position = Vector2(960, 540)

[connection signal="ally_turn_started" from="." to="." method="_on_ally_turn_started"]
[connection signal="enemy_turn_started" from="." to="." method="_on_enemy_turn_started"]
[connection signal="pressed" from="CanvasLayer/UI/HBoxContainer/HBoxContainer/TurnChanger" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Button" to="." method="_on_exit_button_pressed"]
[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_check_hoverable_tiles"]
[connection signal="top_score_action_changed" from="GameBoard/Enemy/UtilityAiAgent" to="GameBoard" method="_on_utility_ai_agent_top_score_action_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
